Inicio do CSS e retirada de uma div

--- a/main/index.html
+++ b/main/index.html
@@ -3,31 +3,51 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+            rel="stylesheet">
         <title>Main</title>
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <img src="../assets/logo.svg" alt="Logomarca da página.">
-                <p>Início</p>
-                <p>Sobre</p>
-                <p>Contato</p>
+                <div class="logo">
+                    <img src="../assets/logo.svg" alt="Logomarca da página.">
+                </div>
+                <div class="menu">
+                    <a href="#">
+                        <span>Início</span></a>
+                    <a href="#">
+                        <span>Sobre</span></a>
+                    <a href="">
+                        <span>Contato</span></a>
+                </div>
             </div>
             <div class="content">
-                <div class="main">
-                    <h2>Lorem ipsum dolor sit</h2>
-                    <p>26/07/2020 às 00:04 - By: Fulano</p>
-                    <img src="../assets/pessoa.png" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus et, tincidunt at quam. 
-                    <br>
-                    Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui. Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus tincidunt id massa eget blandit.</p>
-                    <button type="button">Continuar lendo</button>
+                <div class="conteinerconteudo">
+                    <div class="conteudo1">
+                        <h2>Lorem ipsum dolor sit</h2>
+                        <p>26/07/2020 às 00:04 - By: Fulano</p>
+                        <img src="../assets/pessoa.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
+                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
+                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
+                            et, tincidunt at quam.
+                            <br>
+                            Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
+                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
+                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
+                            tincidunt id massa eget blandit.</p>
+                        <button type="button">Continuar lendo</button>
+                    </div>
                 </div>
                 <div class="sidebar">
-                    <form action="#" method="GET">
-                        <input type="text" placeholder="Pesquise aqui...">
-                    </form>
                     <div class="categorias">
+                        <form action="#" method="GET">
+                            <input type="text" placeholder="Pesquise aqui...">
+                        </form>
                         <h2>Categorias</h2>
                         <p>Tecnologia</p>
                         <p>25</p>
@@ -40,13 +60,11 @@
                         <p>Aventura</p>
                         <p>9</p>
                         <p>Moda</p>
-                        <p>12</p>
-                    </div>
-                    <div class="publicidade">
+                        <p>12</p>    
                         <h2>Publicidade</h2>
                         <div class="ad"></div>
                         <div class="ad"></div>
-                        <div class="ad"></div>
+                        <div class="ad"></div>                    
                     </div>
                 </div>
             </div>
