--- a/main/index.html
+++ b/main/index.html
@@ -34,13 +34,49 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
                             augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
                             rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.
-                            <br>
-                            Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
+                            et, tincidunt at quam.</p>
+                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
                             nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
                             Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
                             tincidunt id massa eget blandit.</p>
+                            <div class="botao">
                         <button type="button">Continuar lendo</button>
+                    </div>
+                    </div>
+
+                    <div class="conteudo1">
+                        <h2>Lorem ipsum dolor sit</h2>
+                        <p>26/07/2020 às 00:04 - By: Fulano</p>
+                        <img src="../assets/pessoa.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
+                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
+                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
+                            et, tincidunt at quam.</p>                           
+                        <p> Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
+                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
+                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
+                            tincidunt id massa eget blandit.</p>
+                            <div class="botao">
+                        <button type="button">Continuar lendo</button>
+                    </div>
+                    </div>
+
+                    <div class="conteudo1">
+                        <h2>Lorem ipsum dolor sit</h2>
+                        <p>26/07/2020 às 00:04 - By: Fulano</p>
+                        <img src="../assets/pessoa.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
+                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
+                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
+                            et, tincidunt at quam.</p>
+                            <br>
+                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
+                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
+                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
+                            tincidunt id massa eget blandit.</p>
+                            <div class="botao">
+                        <button type="button">Continuar lendo</button>
+                    </div>
                     </div>
                 </div>
                 <div class="sidebar">
