--- a/main/index.html
+++ b/main/index.html
@@ -39,15 +39,13 @@
                             nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
                             Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
                             tincidunt id massa eget blandit.</p>
-                        <div class="botao">
-                            <a href="#">Continuar lendo</a>
-                        </div>
+                        <a href="#">Continuar lendo</a>
                     </div>
 
                     <div class="conteudo1">
                         <h2>Lorem ipsum dolor sit</h2>
                         <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/pessoa.png" alt="">
+                        <img src="../assets/computador.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
                             augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
                             rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
@@ -57,15 +55,13 @@
                             nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
                             Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
                             tincidunt id massa eget blandit.</p>
-                        <div class="botao">
-                            <a href="#">Continuar lendo</a>
-                        </div>
+                        <a href="#">Continuar lendo</a>
                     </div>
 
                     <div class="conteudo1">
                         <h2>Lorem ipsum dolor sit</h2>
                         <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/pessoa.png" alt="">
+                        <img src="../assets/pintura.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
                             augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
                             rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
@@ -74,33 +70,67 @@
                             nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
                             Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
                             tincidunt id massa eget blandit.</p>
-                        <div class="botao">
-                            <a href="#">Continuar lendo</a>
-                        </div>
+                        <a href="#">Continuar lendo</a>
                     </div>
+
                 </div>
                 <div class="sidebar">
                     <div class="categorias">
                         <form action="#" method="GET">
                             <input type="text" placeholder="Pesquise aqui...">
                         </form>
-                        <h2>Categorias</h2>
-                        <p>Tecnologia</p>
-                        <p>25</p>
-                        <p>Estilo de vida</p>
-                        <p>8</p>
-                        <p>Arte</p>
-                        <p>2</p>
-                        <p>Comida</p>
-                        <p>12</p>
-                        <p>Aventura</p>
-                        <p>9</p>
-                        <p>Moda</p>
-                        <p>12</p>
+
+                    </div>
+                    <h2>Categorias</h2>
+                    <div class="flex">
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Tecnologia</p>
+                                <p>25</p>
+                            </div>
+                        </a>
+
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Estilo de vida</p>
+                                <p>8</p>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Arte</p>
+                                <p>2</p>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Comida</p>
+                                <p>12</p>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Aventura</p>
+                                <p>9</p>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="flexfilhos">
+                                <p>Moda</p>
+                                <p>12</p>
+                            </div>
+                        </a>
+
                         <h2>Publicidade</h2>
-                        <div class="ad"></div>
-                        <div class="ad"></div>
-                        <div class="ad"></div>
+                        <div class="ad">
+                            <p>340 x 240</p>
+                        </div>
+                        <div class="ad">
+                            <p>340 x 240</p>
+                        </div>
+                        <div class="ad">
+                            <p>340 x 240</p>
+                        </div>
                     </div>
                 </div>
             </div>
