--- a/continuar/index.html
+++ b/continuar/index.html
@@ -8,7 +8,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet">
-        <title>Main</title>
+        <title>Continue Lendo</title>
     </head>
     <body>
         <div class="container">
@@ -31,46 +31,26 @@
                         <h2>Lorem ipsum dolor sit</h2>
                         <p>26/07/2020 às 00:04 - By: Fulano</p>
                         <img src="../assets/pessoa.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
-                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
-                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
-                    </div>
-
-                    <div class="conteudo1">
-                        <h2>Lorem ipsum dolor sit</h2>
-                        <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/computador.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
-                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
-                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>
-                            Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
-                    </div>
-
-                    <div class="conteudo1">
-                        <h2>Lorem ipsum dolor sit</h2>
-                        <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/pintura.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
-                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
-                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus et, tincidunt at quam. </p>
+                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui. Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus tincidunt id massa eget blandit..</p>
+                        <ul>
+                            <li>
+                                Lorem ipsum dolor sit amet consectetur.
+                                <ul>
+                                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                                    <li>Asperiores cupiditate praesentium quos, reiciendis iure beatae culpa at officia.</li>
+                                    <li>sapiente fuga delectus ex minima autem inventore ducimus sit nihil recusandae nemo.</li>
+                                </ul>
+                            </li>
+                            <li>Ea placeat quae temporibus nulla dignissimos accusantium!</li>
+                            <li>Quasi inventore mollitia enim non voluptates labore quam sequi dolores, sunt impedit voluptatum.</li>
+                            <li>Fugit quidem minima ut ullam, suscipit mollitia molestias, impedit cupiditate praesentium velit recusandae rem exercitationem voluptas incidunt! Quam aliquid delectus quos laudantium.</li>
+                            <li>Natus doloribus exercitationem esse alias iure, provident doloremque cupiditate quam temporibus ipsam nostrum.</li>
+                        </ul>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus et, tincidunt at quam. </p>
+                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui. Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus tincidunt id massa eget blandit.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus et, tincidunt at quam. </p>
+                        <p> Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui. Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus tincidunt id massa eget blandit.</p>
                     </div>
 
                 </div>
