--- a/main/index.html
+++ b/main/index.html
@@ -39,7 +39,7 @@
                             nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
                             Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
                             tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
+                        <a href="../continuar/index.html">Continuar lendo</a>
                     </div>
 
                     <div class="conteudo1">
