--- a/continuar/index.html
+++ b/continuar/index.html
@@ -95,7 +95,8 @@
                                 </div>
                                 <div class="comentarios">
                                     <label >Comentário</label>
-                                    <input type="text" name="comentario" id="comentario">
+                                  <textarea name="comentario" id="comentario">
+                                  </textarea>
                                 </div>
                             </form>
                                                   
