add página de contatos

--- a/contato/index.html
+++ b/contato/index.html
@@ -8,7 +8,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet">
-        <title>Main</title>
+        <title>Contatos</title>
     </head>
     <body>
         <div class="container">
@@ -17,69 +17,75 @@
                     <img src="../assets/logo.svg" alt="Logomarca da página.">
                 </div>
                 <div class="menu">
-                    <a href="#">
+                    <a href="../main/index.html">
                         <span>Início</span></a>
                     <a href="#">
                         <span>Sobre</span></a>
-                    <a href="../contato/index.html">
+                    <a href="">
                         <span>Contato</span></a>
                 </div>
             </div>
             <div class="content">
                 <div class="conteinerconteudo">
                     <div class="conteudo1">
-                        <h2>Lorem ipsum dolor sit</h2>
-                        <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/pessoa.png" alt="">
+                        <h1>Contato</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
                             augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
                             rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="../continuar/index.html">Continuar lendo</a>
+                            et, tincidunt at quam.
+                        </p>
+                        <div class="contatos">
+                            <h2>INFORMAÇÕES PARA CONTATO</h2>
+                        <img src="../assets/localizacao.svg" alt="">
+                        <span>Endereço</span>
+                        <p>Av. Tancredo Neves, 2227, Ed. Salvador Prime Caminho das Árvores, Salvador •
+                            Bahia</p>
+                        <img src="../assets/telefone.svg" alt="">
+                        <span>Telefone</span>
+                        <p>(71) 9 9999-9999 | (11) 1 1111-1111</p>
+                        <img src="../assets/headset.svg" alt="">
+                        <span>Suporte</span>
+                        <p>suporte@cubos.academy</p>
                     </div>
+                        <div class="comentario">
+                            <h2>ENTRE EM CONTATO</h2>
+                            <div class="formulario">
+                                <form action="post">
+                                    <div class="dados">
+                                        <div class="nome">
+                                            <label >Nome</label>
+                                            <input type="text" name="nome" id="nome">
+                                        </div>
+                                        <div class="email">
+                                            <label >E-mail</label>
+                                            <input type="email" name="email" id="email">
+                                        </div>
+                                    </div>
+                                    <div class="assunto">
+                                        <label for="Assunto">Assunto</label>
+                                        <input type="text">
+                                    </div>
+                                    <div class="comentarios">
+                                        <label >Comentário</label>
+                                        <textarea name="comentario" id="comentario"></textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            
+                            </div>
+                            <div class="buttoncoment">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </div>
 
-                    <div class="conteudo1">
-                        <h2>Lorem ipsum dolor sit</h2>
-                        <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/computador.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
-                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
-                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>
-                            Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
-                    </div>
-
-                    <div class="conteudo1">
-                        <h2>Lorem ipsum dolor sit</h2>
-                        <p>26/07/2020 às 00:04 - By: Fulano</p>
-                        <img src="../assets/pintura.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus quis
-                            augue elementum vestibulum. Nam a orci erat. Aenean arcu mauris, finibus a
-                            rutrum quis, commodo sollicitudin nibh. Morbi diam lacus, suscipit nec maximus
-                            et, tincidunt at quam.</p>
-                        <p>Curabitur sit amet euismod mi. Duis dictum vel ipsum vel tempus. Etiam diam
-                            nisl, feugiat ornare enim ac, aliquam ultrices erat. Nam tincidunt cursus dui.
-                            Integer varius nisi quis dui commodo, vitae euismod nisi elementum. Vivamus
-                            tincidunt id massa eget blandit.</p>
-                        <a href="#">Continuar lendo</a>
-                    </div>
-
+              
                 </div>
+
                 <div class="sidebar">
                     <div class="categorias">
                         <form action="#" method="GET">
                             <input type="text" placeholder="Pesquise aqui...">
                         </form>
-
                     </div>
                     <h2>Categorias</h2>
                     <div class="flex">
