--- a/continuar/index.html
+++ b/continuar/index.html
@@ -21,7 +21,7 @@
                         <span>Início</span></a>
                     <a href="#">
                         <span>Sobre</span></a>
-                    <a href="">
+                    <a href="../contato/index.html">
                         <span>Contato</span></a>
                 </div>
             </div>
